# app-django

./: .env.demo.example  .env.example  .gitignore  README.md  docker-compose.dev.yml
backend/: .dockerignore  .gitignore  Dockerfile  docker-entrypoint.sh  gunicorn.conf.py  pyproject.toml  requirements.txt
backend/apps/accounts/: admin.py  authentication.py  models.py  serializers.py  urls.py  user_urls.py  user_views.py  views.py  webhooks.py
backend/apps/ai/: __init__.py  admin.py  apps.py  client.py  models.py  scoping.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/apps/asistencia/: access.py  device_auth.py  diario.py  export.py  filters.py  models.py  public_urls.py  public_views.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/common/: apps.py  b2_buckets.py  b2_client.py  datetime_fmt.py  file_delivery.py  media_paths.py  models.py  modules.py  pagination.py  roles.py  storage_cleanup.py  storages.py  views.py
backend/apps/correspondencia/: access.py  admin.py  apps.py  export.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/entities/: admin.py  apps.py  deletion.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/apps/pdm/: access.py  analytics.py  apps.py  bpin_view.py  chat_service.py  chat_tools.py  contratos_parser.py  ejecucion_parser.py  ejecucion_resumen.py  evidencia_storage.py  filters.py  metrics.py  models.py  piip_export.py  producto_codigo.py  public_chat_urls.py  (+8 more)
backend/config/: api_v1.py  celery.py  urls.py  wsgi.py
(+291 files in other folders)
