[project]
name = "softone-backend"
version = "0.1.0"
description = "SoftOne backend — Django REST Framework"
requires-python = ">=3.13"
dependencies = [
    "Django==5.1.4",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.3.1",
    "django-cors-headers==4.6.0",
    "django-filter==24.3",
    "drf-spectacular==0.28.0",
    "psycopg[binary,pool]==3.2.3",
    "gunicorn==23.0.0",
    "python-dotenv==1.0.1",
    "argon2-cffi==23.1.0",
    "django-ratelimit==4.1.0",
    "whitenoise==6.8.2",
]

[tool.ruff]
line-length = 100
target-version = "py313"
